Bug 159007 - Moving a grouped object to a different layer makes it disappear
Summary: Moving a grouped object to a different layer makes it disappear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.3 target:24.2.8 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Layers
  Show dependency treegraph
 
Reported: 2024-01-03 21:34 UTC by stragu
Modified: 2024-10-21 20:25 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample ODG (14.56 KB, application/vnd.oasis.opendocument.graphics)
2024-01-03 21:34 UTC, stragu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2024-01-03 21:34:25 UTC
Created attachment 191745 [details]
sample ODG

Steps:
1. Open attachment
2. Double-click on circle "2" to enter group
3. Long-click and drag-and-drop circle "2" onto the Controls layer to move it to that layer

Result: object disappears (but can be seen when drag-and-dropped)

Repro in recent trunk build:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 960e37af28807ed1b376e26c4504ab755a81dfd5
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also with gen VCL plugin.

Bibisected with linux-64-24.2 to first bad build commit [97a48f557a3a2079bbdd45065fa0f3b1028b816d] which points to:

commit 313be607903a381830600c0a60b2e299fcaec685
author	Caolán McNamara 	Wed Aug 02 17:16:17 2023 +0100
committer	Caolán McNamara 	Thu Aug 03 12:15:58 2023 +0200
Related: cool#6911 opt to skip SdrObject::GetViewContent() when possible
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155269

Caolán, can you please have a look?
Comment 1 m_a_riosv 2024-01-03 22:10:35 UTC
I'm not able to make it disappear.
I can drag out of the page, but the circle remains.
And visible in the navigator.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e0f710ad29d33acda3c1b77d7a0980ca9ae2e3d1
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 m_a_riosv 2024-01-03 22:17:13 UTC
Sorry @Stéphane, how do you drag on the controls layer?
Comment 3 stragu 2024-01-04 00:25:19 UTC
(In reply to m_a_riosv from comment #2)
> Sorry @Stéphane, how do you drag on the controls layer?
See https://help.libreoffice.org/7.6/en-US/text/sdraw/guide/layer_move.html
You need to click and hold (without moving) until the icon changes. Then you can drag to the layer tab. It's not the easiest feature to discover!
Comment 4 m_a_riosv 2024-01-04 21:21:31 UTC
Ok, I can reproduce it now. As you mention, can be selected with the mouse or with the navigator.
Comment 5 Justin L 2024-10-15 18:33:07 UTC
repro 25.2+
Interestingly, it can be dragged to Dimensions OK - just not Controls.
Also, while in Controls, when its "area" is long-clicked on, it appears briefly.
Comment 6 Justin L 2024-10-15 18:47:15 UTC
This one looks like a revert candidate to me.
Comment 7 Caolán McNamara 2024-10-17 15:14:28 UTC
https://gerrit.libreoffice.org/c/core/+/175094 to revert then
Comment 8 Commit Notification 2024-10-17 18:33:41 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/7fdf64f6e5c30dff5caea27ea92bee98137cce27

tdf#159007 Revert "optimization to skip SdrObject::GetViewContent()"

It will be available in 24.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2024-10-17 18:58:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/239a7d264a9148809ccfb842ac2a9e6975f9be00

tdf#159007 Revert "optimization to skip SdrObject::GetViewContent()"

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-10-17 20:17:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/819cae19dbdf45188a004136dc3c5a0a6cdec1b8

tdf#159007 Revert "optimization to skip SdrObject::GetViewContent()"

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-10-21 20:25:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/f337797b99250e7e3ff7799e4399aa157e76a897

tdf#159007 Revert "optimization to skip SdrObject::GetViewContent()"

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.