tdf#159007 Revert "optimization to skip SdrObject::GetViewContent()"

This reverts commit 313be607903a381830600c0a60b2e299fcaec685.

Change-Id: I2dc7489ecc302473edd763fd0e4d6784fadc9bb4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175044
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>